fix: fix bg image overlap content on mobile

--- a/bridge-ui/src/components/bridge/faq-help/faq-help.module.scss
+++ b/bridge-ui/src/components/bridge/faq-help/faq-help.module.scss
@@ -1,7 +1,7 @@
 .faq-help {
   text-align: center;
   font-size: 0.875rem;
-  margin-top: 1.5rem;
+  margin: 1.5rem 0;
   font-family: var(--font-atyp-text);
 
   a {
